--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -13,6 +13,7 @@
     "node": "8"
   },
   "dependencies": {
+    "cloudinary": "^1.16.0",
     "dotenv": "^8.1.0",
     "firebase": "^6.5.0",
     "firebase-admin": "^8.0.0",
