--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-camera": "^3.4.0",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
@@ -27,5 +32,6 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "proxy": "http://localhost:5000/insta-clone-57141/us-central1/api"
 }
